--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Lighthouse portfolio</title>
+    <title>The Lighthouse Portfolio works</title>
     <link rel="shortcut icon" href="images/favicon1.ico">
     <!--CSS reset-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
