changed the layout of contact page <main>

--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
     </header>
 
     <main class="page__main">
-        <h1>Work</h1>
+        <h1 class="workpage__h1">Work</h1>
         <div class="grid">
             <div class="grid__item">
                 <h2>First project</h2>
