--- a/contact.html
+++ b/contact.html
@@ -40,35 +40,40 @@
     </header>
 
 
-    <main class="page__main">
+    <h1 class="contactpage__h1">Let's get in touch!</h1>
+
+    <main class="contactpage__grid">
         
-        <div>
+        <div class="contactpage__griditem1">
             Stefani Durovic<br>
             Ardeystraße 193<br>
             58453 Witten<br>
             Deutschland<br>
-            <br>
+        </div>
+
+        <div class="contactpage__griditem2">
+
+            <form action="" method="post" class="contact-form">
+                <label for="name">Your name: *</label>
+                <input type="text" id="name" required name="user_name"> <br>
+
+                <label for="email">Email: *</label>
+                <input type="email" id="email" required name="user_email" class="email-input"> <br>
+
+                <label for="message">Message: *</label>
+                <textarea type="text" id="message" name="message" required rows="6" cols="51" maxlength="240"></textarea>
+                <p>The message must not exceed the maximum of 240 characters.</p>
+
+                <button type="Submit">Send message</button>
+            </form>
+
+        </div>
+
+        <div class="contactpage__griditem1">
             <a href="tel: +49 1633854517">Tel +49 1633854517</a><br>
-            <a href="skype:live:stefanithefirst">Skype live:stefanithefirst</a><br>
-            <a href="mailto:office@careerfoundry.com">office@careerfoundry.com</a><br>
-            <a href="mailto:office@careerfoundry.com">Contact me</a>
-          </div>
-
-          <form action="" method="post">
-
-            <label for="name">Your name:*</label>
-            <input type="text" id="name" required name="user_name">
-
-            <label for="email">Email:*</label>
-            <input type="email" id="email" required name="user_email">
-
-            <label for="message">Message:*</label>
-            <textarea type="text" id="message" name="message" required rows="6" cols="50" maxlength="240"></textarea>
-            <p>The message must not exceed the maximum of 240 characters.</p>
-
-            <button type="Submit">Send message</button>
-
-          </form>
+            <a href="mailto:stefani.djurovic@yahoo.com">stefani.djurovic@yahoo.com</a><br>
+            <a href="mailto:stefani.djurovic@yahoo.com">Contact me</a>
+        </div>
 
     </main>
 
