updated the href for link on index page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div>
             <h1>Hello World!</h1>
             <p>My name is Stefani Durovic. I am a <span>web</span> developer from Germany.</p>
-            <a class="main__a" href="#">Check out my work</a>
+            <a class="main__a" href="work.html">Check out my work</a>
             <div class="profile__button">
                 <button type="button">Contact me</button>
             </div>
