changed the index page button from <button> to <a>

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="page__header--item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
-                    <a href="index.html" role="menuitem" clas>Home</a>
+                    <a href="index.html" role="menuitem">Home</a>
                 </li>
                 <li role="presentation">
                     <a href="work.html" role="menuitem">My work</a>
@@ -47,7 +47,7 @@
             <p>My name is Stefani Durovic. I am a <span>web</span> developer from Germany.</p>
             <a class="main__a" href="work.html">Check out my work</a>
             <div class="profile__button">
-                <button type="button">Contact me</button>
+                <a class="button" href="contact.html">Contact me</a>
             </div>
         </div>
     </main>
