minor syntactical tweaks after w3c validation

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
 <body>
     <header class="page__header">
         
-        <img src="images/The Lighthouse Portfolio Logo.png" alt="Logo for The Lighthouse Portfolio" class="page__header--item">
+        <img src="images/The_Lighthouse_Portfolio_Logo.png" alt="Logo for The Lighthouse Portfolio" class="page__header--item">
         
         <nav class="page__header--item">
             <ul role="menubar" class="navigation-list">
@@ -81,7 +81,7 @@
         </table>
     </div>
 
-    <a href="files/CV Stefani Durovic.pdf" class="button" download>Download my CV</a>
+    <a href="files/CV_Stefani_Durovic.pdf" class="button" download>Download my CV</a>
 
     <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewbox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
