--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
 <body>
     <header class="page__header">
         
-        <img src="images/The Lighthouse Portfolio Logo.png" alt="Logo for The Lighthouse Portfolio" class="page__header--item">
+        <img src="images/The_Lighthouse_Portfolio_Logo.png" alt="Logo for The Lighthouse Portfolio" class="page__header--item">
         
         <nav class="page__header--item">
             <ul role="menubar" class="navigation-list">
