--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
 <body>
     <header class="page__header">
         
-        <img src="images/The Lighthouse Portfolio Logo.png" alt="Logo for The Lighthouse Portfolio" class="page__header--item">
+        <img src="images/The_Lighthouse_Portfolio_Logo.png" alt="Logo for The Lighthouse Portfolio" class="page__header--item">
         
         <nav class="page__header--item">
             <ul role="menubar" class="navigation-list">
@@ -40,7 +40,7 @@
 
     <main class="page__main">
         <div class="profile">
-            <img src="images/Stefani Durovic Portrait.jpg" class="profile__portrait" alt="Photograph of Stefani Durovic, founder of The Lighthouse Portfolio">
+            <img src="images/Stefani_Durovic_Portrait.jpg" class="profile__portrait" alt="Photograph of Stefani Durovic, founder of The Lighthouse Portfolio">
         </div>
         <div>
             <h1>Hello World!</h1>
