fixed the issue with "non-sticking" footer on contact page

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
     <h1 class="contactpage__h1">Let's get in touch!</h1>
 
-    <main class="contactpage__grid">
+    <main class="page main contactpage__grid">
         
         <div class="contactpage__griditem1">
             Stefani Durovic<br>
