--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
     </header>
 
 
-    <h1 class="contactpage__h1">Let's get in touch!</h1>
+    
 
-    <main class="page main contactpage__grid">
+    <main class="page__main contactpage__grid">
         
         <div class="contactpage__griditem1">
             Stefani Durovic<br>
@@ -52,6 +52,8 @@
         </div>
 
         <div class="contactpage__griditem2">
+
+            <h1 class="contactpage__h1">Let's get in touch!</h1>
 
             <form action="#" method="post" class="contact-form">
                 <label for="name">Your name: *</label>
