adjusted the contact page layout for mobile

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                 <input type="email" id="email" required name="user_email" class="email-input"> <br>
 
                 <label for="message">Message: *</label>
-                <textarea id="message" name="message" required rows="6" cols="51" maxlength="240"></textarea>
+                <textarea id="message" name="message" required maxlength="240"></textarea>
                 <p>The message must not exceed the maximum of 240 characters.</p>
 
                 <button type="Submit">Send message</button>
