--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,13 @@
             <a href="mailto:stefani.djurovic@yahoo.com">Contact me</a>
         </div>
 
+        <div class="mobile-only">
+            <h3>You can also call me<br>or e-mail me directly</h3>
+            <a href="tel:+491633854517">Tel: +49 1633854517</a><br>
+            <a href="mailto:stefani.djurovic@yahoo.com">stefani.djurovic@yahoo.com</a><br>
+            <a href="mailto:stefani.djurovic@yahoo.com">Contact me</a>
+        </div>
+
     </main>
 
     <footer class="page__footer">
