finished the contact page styling

--- a/contact.html
+++ b/contact.html
@@ -80,8 +80,7 @@
         <div class="mobile-only">
             <h3>You can also call me<br>or e-mail me directly</h3>
             <a href="tel:+491633854517">Tel: +49 1633854517</a><br>
-            <a href="mailto:stefani.djurovic@yahoo.com">stefani.djurovic@yahoo.com</a><br>
-            <a href="mailto:stefani.djurovic@yahoo.com">Contact me</a>
+            <a href="mailto:stefani.djurovic@yahoo.com">stefani.djurovic@yahoo.com</a>
         </div>
 
     </main>
