vertically centered the content of main

--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
     </header>
 
     <main class="page__main">
-        <div class="profile">
-            <img src="images/Stefani_Durovic_Portrait.jpg" class="profile__portrait" alt="Photograph of Stefani Durovic, founder of The Lighthouse Portfolio">
-        </div>
-        <div>
-            <h1>Hello World!</h1>
-            <p>My name is Stefani Durovic. I am a <span>web</span> developer from Germany.</p>
-            <a class="main__a" href="work.html">Check out my work</a>
-            <div class="profile__button">
-                <a class="button" href="contact.html">Contact me</a>
+        <div class="main__content">
+            <div class="profile">
+                <img src="images/Stefani_Durovic_Portrait.jpg" class="profile__portrait" alt="Photograph of Stefani Durovic, founder of The Lighthouse Portfolio">
+            </div>
+            <div>
+                <h1>Hello World!</h1>
+                <p>My name is Stefani Durovic. I am a <span>web</span> developer from Germany.</p>
+                <a class="main__a" href="work.html">Check out my work</a>
+                <div class="profile__button">
+                    <a class="button" href="contact.html">Contact me</a>
+                </div>
             </div>
         </div>
     </main>
