--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="profile">
                 <img src="images/Stefani_Durovic_Portrait.jpg" class="profile__portrait" alt="Photograph of Stefani Durovic, founder of The Lighthouse Portfolio">
             </div>
-            <div>
+            <div class="main___profile-text">
                 <h1>Hello World!</h1>
                 <p>My name is Stefani Durovic. I am a <span>web</span> developer from Germany.</p>
                 <a class="main__a" href="work.html">Check out my work</a>
