changed the color and linked footer elements

--- a/about.html
+++ b/about.html
@@ -687,9 +687,9 @@
     <footer class="page__footer">
         <p>Find me on</p>
         <div class="social-media">
-            <a href="#"><img src="images/1217104_github_icon.svg" alt="Github icon"></a>
-            <a href="#"><img src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
-            <a href="#"><img src="images/1217098_twitter_icon.svg" alt="Twiter icon"></a>
+            <a href="https://github.com/StefaniDurovic" target="_blank"><img class="svg-color" src="images/1217104_github_icon.svg" alt="Github icon"></a>
+            <a href="https://www.linkedin.com/in/stefani-durovic-86454064/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
+            <a href="#"><img class="svg-color" src="images/1217098_twitter_icon.svg" alt="Twiter icon"></a>
         </div>
     </footer>
 
