--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,8 @@
     <main class="page__main contactpage__grid">
         
         <div class="contactpage__griditem1">
-            Stefani Durovic<br>
-            Ardeystraße 193<br>
-            58453 Witten<br>
-            Deutschland<br>
+            <h3>Feel free to call me...</h3>
+            <a href="tel:+491633854517">+49 1633854517</a><br>
         </div>
 
         <div class="contactpage__griditem2">
@@ -71,10 +69,9 @@
 
         </div>
 
-        <div class="contactpage__griditem1">
-            <a href="tel:+491633854517">Tel: +49 1633854517</a><br>
+        <div class="contactpage__griditem3">
+            <h3>...or send me an e-mail directly</h3>
             <a href="mailto:stefani.djurovic@yahoo.com">stefani.djurovic@yahoo.com</a><br>
-            <a href="mailto:stefani.djurovic@yahoo.com">Contact me</a>
         </div>
 
         <div class="mobile-only">
