finished the mobile responsiveness for index page

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
     </header>
 
     <main class="page__main">
-        <div class="main__content">
-            <div class="profile">
-                <img src="images/Stefani_Durovic_Portrait.jpg" class="profile__portrait" alt="Photograph of Stefani Durovic, founder of The Lighthouse Portfolio">
+        <div class="index__content">
+            <div class="profile index__content--mobile">
+                <img src="images/Stefani_Durovic_Portrait.jpg" class="profile__portrait index__content--mobile" alt="Photograph of Stefani Durovic, founder of The Lighthouse Portfolio">
             </div>
-            <div>
-                <h1>Hello World!</h1>
-                <p>My name is Stefani Durovic. I am a <span>web</span> developer from Germany.</p>
-                <a class="main__a" href="work.html">Check out my work</a>
-                <div class="profile__button">
-                    <a class="button" href="contact.html">Contact me</a>
+            <div class="index__content--mobile">
+                <h1 class="index__content--mobile-item">Hello World!</h1>
+                <p class="index__content--mobile-item">My name is Stefani Durovic. I am a <span>web</span> developer from Germany.</p>
+                <a class="main__a index__content--mobile-item" href="work.html">Check out my work</a>
+                <div class="profile__button index__content--mobile-item">
+                    <a class="button index__content--mobile-item" href="contact.html">Contact me</a>
                 </div>
             </div>
         </div>
