--- a/contact.html
+++ b/contact.html
@@ -54,15 +54,22 @@
             <h1 class="contactpage__h1">Let's get in touch!</h1>
 
             <form action="#" method="post" class="contact-form">
-                <label for="name">Your name: *</label>
-                <input type="text" id="name" required name="user_name"> <br>
+                <div class="form__element">
+                    <label for="name">Your name: *</label>
+                    <input type="text" id="name" required name="user_name"> <br>
+                </div>
 
-                <label for="email">Email: *</label>
-                <input type="email" id="email" required name="user_email" class="email-input"> <br>
+                <div class="form__element">
+                    <label for="email">Email: *</label>
+                    <input type="email" id="email" required name="user_email"> <br>
+                </div>
 
-                <label for="message">Message: *</label>
-                <textarea id="message" name="message" required maxlength="240"></textarea>
-                <p>The message must not exceed the maximum of 240 characters.</p>
+                <div class="form__element">
+                    <label for="message">Message: *</label>
+                    <textarea id="message" name="message" required maxlength="240"></textarea>
+                
+                    <p>The message must not exceed the maximum of 240 characters.</p>
+                </div>
 
                 <button type="Submit">Send message</button>
             </form>
