changed copy on about page

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         
         <h1>Hi, I am Stefani, nice to meet you!</h1>
         <hr>
-        <p>I am a psychologist and a web development enthusiast, working hard on making it my career! I have experience with HTML, CSS, Figma and Wordpress so far. <br> When I'm not coding, you'll find me traveling and exploring, taking photos, bachata dancing or reading. <br> Thank you for checking out my work! Feel free to contact me.<br><span class="cheers">Cheers!</span></p>
+        <p>I am a psychologist and a web development enthusiast, working hard on making it my career! I have experience with HTML, CSS, Figma and Wordpress so far. <br> When I'm not coding, you'll find me traveling, taking photos, dancing bachata or reading. <br> Thank you for checking out my work! Feel free to contact me.<br><span class="cheers">Cheers!</span></p>
     
 
     <div>
