updated info on "my-work" page

--- a/work.html
+++ b/work.html
@@ -41,35 +41,35 @@
     <main class="page__main">
         <h1 class="workpage__h1">Work</h1>
         <div class="grid">
-            <div class="grid__item">
-                <h2>First project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus vero officiis veniam molestias ratione laudantium unde nemo consequatur soluta asperiores!</p>
-                <a href="#">See project on GitHub</a>
+            <div class="grid__item" style="background-color: #ffcdb2;">
+                <h2>Pokedex - a simple JS app</h2>
+                <p style="height: 50px;">This is a very simple, one-page app that allows users to get some basic info about pokemons. Users can click on pokemons from the list and see details about them.</p>
+                <a href="https://github.com/StefaniDurovic/Simple-js-app" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
-            <div class="grid__item">
-                <h2>First project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus vero officiis veniam molestias ratione laudantium unde nemo consequatur soluta asperiores!</p>
-                <a href="#">See project on GitHub</a>
+            <div class="grid__item" style="background-color: #A29EA9;">
+                <h2>To-do list - a jQuery app</h2>
+                <p style="height: 50px;">A simple jQuery to-do-list app. Users can add, read, delete and reorder list items.</p>
+                <a href="https://github.com/StefaniDurovic/To-do-list" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
-            <div class="grid__item">
-                <h2>First project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus vero officiis veniam molestias ratione laudantium unde nemo consequatur soluta asperiores!</p>
-                <a href="#">See project on GitHub</a>
+            <div class="grid__item" style="background-color: #e5989b;">
+                <h2>Client app for the movie API</h2>
+                <p style="height: 60px;">Frontend for the Jessica Chastain movies API. Made using React. Users can sign up, browse movies, read info about them, add movies to favorites and change personal details.</p>
+                <a href="https://github.com/StefaniDurovic/movieAPI-client" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
-            <div class="grid__item">
-                <h2>First project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus vero officiis veniam molestias ratione laudantium unde nemo consequatur soluta asperiores!</p>
-                <a href="#">See project on GitHub</a>
+            <div class="grid__item" style="background-color: #b5838d;">
+                <h2>Meet App</h2>
+                <p style="height: 60px;">A React app for finding web dev events in cities around the world. Developed using TDD and BDD approaches. Based on Google Calendar API. Users can find movies by city, read details and see relevant graphs.</p>
+                <a href="https://github.com/StefaniDurovic/meet" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
-            <div class="grid__item">
-                <h2>First project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus vero officiis veniam molestias ratione laudantium unde nemo consequatur soluta asperiores!</p>
-                <a href="#">See project on GitHub</a>
+            <div class="grid__item" style="background-color: #ffb4a2;">
+                <h2>Stay tuned for more!</h2>
+                <p>Follow me on GitHub:</p>
+                <a href="https://github.com/StefaniDurovic" target="_blank" class="button index__content--mobile-item">See projects on GitHub</a>
             </div>
-            <div class="grid__item">
-                <h2>First project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus vero officiis veniam molestias ratione laudantium unde nemo consequatur soluta asperiores!</p>
-                <a href="#">See project on GitHub</a>
+            <div class="grid__item" style="background-color: #6d6875;">
+                <h2>A movie database API</h2>
+                <p style="height: 50px;">A small API ofering a list of chosen movies starring the award-winning actress Jessica Chastain. Made in Node.</p>
+                <a href="https://github.com/StefaniDurovic/movie_api" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
         </div>
     </main>
