--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
             </div>
             <div class="grid__item" style="background-color: #e5989b;">
                 <h2>Client app for the movie API</h2>
-                <p style="height: 60px;">Frontend for the Jessica Chastain movies API. Made using React. Users can sign up, browse movies, read info about them, add movies to favorites and change personal details.</p>
+                <p style="height: 60px;">Frontend for the Jessica Chastain movies API. Built with React. Users can sign up, browse movies, read info about them, add movies to favorites and change personal details.</p>
                 <a href="https://github.com/StefaniDurovic/movieAPI-client" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
             <div class="grid__item" style="background-color: #b5838d;">
@@ -68,7 +68,7 @@
             </div>
             <div class="grid__item" style="background-color: #6d6875;">
                 <h2>A movie database API</h2>
-                <p style="height: 50px;">A small API ofering a list of chosen movies starring the award-winning actress Jessica Chastain. Made in Node.</p>
+                <p style="height: 50px;">A small API offering a list of chosen movies starring Oscar-winning actress Jessica Chastain. Built in Node.</p>
                 <a href="https://github.com/StefaniDurovic/movie_api" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
         </div>
