Updated the projects page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About The Lighthouse Portfolio</title>
+    <title>About</title>
     <link rel="shortcut icon" href="images/favicon1.ico">
     <!--CSS reset-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -44,10 +44,10 @@
         
         <h1>Hi, I am Stefani, nice to meet you!</h1>
         <hr>
-        <p>I am a psychologist and a web development enthusiast, working hard on making it my career! I have experience with HTML, CSS, Figma and Wordpress so far. <br> When I'm not coding, you'll find me traveling, taking photos, dancing bachata or reading. <br> Thank you for checking out my work! Feel free to contact me.<br><span class="cheers">Cheers!</span></p>
+        <p>I am a Web Developer and a Web Design enthusiast from Germany. My experience in web development stretches across HTML, CSS, JavaScript, TypeScript, React, React Native, Angular, Node, jQuery, Redux, Expo, Bootstrap, Material Design, Express, MongoDB, SQL, JSdoc, TypeDoc, Firebase, AWS Lambda, Recharts, Figma and more. I find my background in psychology very useful for a career in web development, since psychology studies have trained me in analytical thinking, while my previous work with people helps me really understand personas and user flows, which helps me build great user experiences.    <br> When I'm not coding, you'll find me traveling, taking photos, dancing bachata or reading. <br> Thank you for checking out my work! Feel free to contact me.<br><span class="cheers">Cheers!</span></p>
     
 
-    <div>
+    <!-- <div>
         <table>
             <thead>
                 <tr>
@@ -79,7 +79,7 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </div> -->
 
     <a href="files/CV_Stefani_Durovic.pdf" class="button" download>Download my CV</a>
 
