--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Lighthouse Portfolio works</title>
+    <title>Projects</title>
     <link rel="shortcut icon" href="images/favicon1.ico">
     <!--CSS reset-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -39,37 +39,47 @@
     </header>
 
     <main class="page__main">
-        <h1 class="workpage__h1">Work</h1>
+        <h1 class="workpage__h1">Projects</h1>
         <div class="grid">
             <div class="grid__item" style="background-color: #ffcdb2;">
-                <h2>Pokedex - a simple JS app</h2>
+                <h2>Pokedex - a Simple JS App</h2>
                 <p style="height: 50px;">This is a very simple, one-page app that allows users to get some basic info about pokemons. Users can click on pokemons from the list and see details about them.</p>
                 <a href="https://github.com/StefaniDurovic/Simple-js-app" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/Simple-js-app/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #A29EA9;">
-                <h2>To-do list - a jQuery app</h2>
+                <h2>To-do List - a jQuery App</h2>
                 <p style="height: 50px;">A simple jQuery to-do-list app. Users can add, read, delete and reorder list items.</p>
                 <a href="https://github.com/StefaniDurovic/To-do-list" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/To-do-list/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #e5989b;">
-                <h2>Client app for the movie API</h2>
+                <h2>React Movie App</h2>
                 <p style="height: 60px;">Frontend for the Jessica Chastain movies API. Built with React. Users can sign up, browse movies, read info about them, add movies to favorites and change personal details.</p>
                 <a href="https://github.com/StefaniDurovic/movieAPI-client" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://jessica-chastain-movies.netlify.app/login" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #b5838d;">
                 <h2>Meet App</h2>
                 <p style="height: 60px;">A React app for finding web dev events in cities around the world. Developed using TDD and BDD approaches. Based on Google Calendar API. Users can find movies by city, read details and see relevant graphs.</p>
                 <a href="https://github.com/StefaniDurovic/meet" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/meet/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #ffb4a2;">
-                <h2>Stay tuned for more!</h2>
-                <p>Follow me on GitHub:</p>
-                <a href="https://github.com/StefaniDurovic" target="_blank" class="button index__content--mobile-item">See projects on GitHub</a>
+                <h2>Angular Movie App</h2>
+                <p style="height: 90px;">Frontend for the Jessica Chastain movies API. Built with Angular. Users can sign up, browse movies, read info about movies, directors and genres. They can also add movies to favorites and change personal details.</p>
+                <a href="https://github.com/StefaniDurovic/myFlix-Angular-client" target="_blank" class="button index__content--mobile-item">See projects on GitHub</a>
+                <a href="https://stefanidurovic.github.io/myFlix-Angular-client/" target="_blank" class="button index__content--mobile-item">Live demo</a>
+            </div>
+            <div class="grid__item" style="background-color: #8a8397;">
+                <h2>A Movie Database API</h2>
+                <p style="height: 90px;">A small API offering a list of chosen movies starring Oscar-winning actress Jessica Chastain. Built in Node.</p>
+                <a href="https://github.com/StefaniDurovic/movie_api" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
             <div class="grid__item" style="background-color: #6d6875;">
-                <h2>A movie database API</h2>
-                <p style="height: 50px;">A small API offering a list of chosen movies starring Oscar-winning actress Jessica Chastain. Built in Node.</p>
-                <a href="https://github.com/StefaniDurovic/movie_api" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <h2>Hello World - a React Native Chat App</h2>
+                <p style="height: 80px;">A chat app built using React Native, Expo and Google Firebase. The app provides users with a user interface and options to share their location, take photos and share images.</p>
+                <a href="https://github.com/StefaniDurovic/hello-world" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
         </div>
     </main>
