--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="images/Stefani_Durovic_Portrait.jpg" class="profile__portrait index__content--mobile" alt="Photograph of Stefani Durovic, founder of The Lighthouse Portfolio">
             </div>
             <div class="index__content--mobile">
-                <h1 class="index__content--mobile-item">Hello World!</h1>
+                <h1 class="index__content--mobile-item">Hello!</h1>
                 <p class="index__content--mobile-item">My name is Stefani Durovic. I am a <span>web</span> developer from Germany.</p>
                 <a class="main__a index__content--mobile-item" href="work.html">Check out my work</a>
                 <div class="profile__button index__content--mobile-item">
