added screenshots to projects

--- a/work.html
+++ b/work.html
@@ -42,31 +42,36 @@
         <h1 class="workpage__h1">Projects</h1>
         <div class="grid">
             <div class="grid__item" style="background-color: #ffcdb2;">
-                <h2>Pokedex - a Simple JS App</h2>
-                <p style="height: 50px;">This is a very simple, one-page app that allows users to get some basic info about pokemons. Users can click on pokemons from the list and see details about them.</p>
-                <a href="https://github.com/StefaniDurovic/Simple-js-app" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
-                <a href="https://stefanidurovic.github.io/Simple-js-app/" target="_blank" class="button index__content--mobile-item">Live demo</a>
-            </div>
-            <div class="grid__item" style="background-color: #A29EA9;">
-                <h2>To-do List - a jQuery App</h2>
-                <p style="height: 50px;">A simple jQuery to-do-list app. Users can add, read, delete and reorder list items.</p>
-                <a href="https://github.com/StefaniDurovic/To-do-list" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
-                <a href="https://stefanidurovic.github.io/To-do-list/" target="_blank" class="button index__content--mobile-item">Live demo</a>
-            </div>
-            <div class="grid__item" style="background-color: #e5989b;">
                 <h2>React Movie App</h2>
+                <img src="images/React.png" width="400" alt="Screenshot of React Movie App project">
                 <p style="height: 60px;">Frontend for the Jessica Chastain movies API. Built with React. Users can sign up, browse movies, read info about them, add movies to favorites and change personal details.</p>
                 <a href="https://github.com/StefaniDurovic/movieAPI-client" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
                 <a href="https://jessica-chastain-movies.netlify.app/login" target="_blank" class="button index__content--mobile-item">Live demo</a>
-            </div>
-            <div class="grid__item" style="background-color: #b5838d;">
-                <h2>Meet App</h2>
+            </div>            
+            <div class="grid__item" style="background-color: #A29EA9;">
+                <h2>Meet App - a React PWA</h2>
+                <img src="images/MeetApp.png" width="400" alt="Screenshot of Meet App project">
                 <p style="height: 60px;">A React app for finding web dev events in cities around the world. Developed using TDD and BDD approaches. Based on Google Calendar API. Users can find movies by city, read details and see relevant graphs.</p>
                 <a href="https://github.com/StefaniDurovic/meet" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
                 <a href="https://stefanidurovic.github.io/meet/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
+            <div class="grid__item" style="background-color: #e5989b;">
+                <h2>Pokedex - a Simple JS App</h2>
+                <img src="images/Pokedex.png" width="400" alt="Screenshot of Pokedex App project">
+                <p style="height: 50px;">This is a very simple, one-page app that allows users to get some basic info about pokemons. Users can click on pokemons from the list and see details about them.</p>
+                <a href="https://github.com/StefaniDurovic/Simple-js-app" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/Simple-js-app/" target="_blank" class="button index__content--mobile-item">Live demo</a>
+            </div>
+            <div class="grid__item" style="background-color: #b5838d;">
+                <h2>To-do List - a jQuery App</h2>
+                <img src="images/To-do.png" width="400" alt="Screenshot of To-do List App project">
+                <p style="height: 60px;">A simple jQuery to-do-list app. Users can add, read, delete and reorder list items.</p>
+                <a href="https://github.com/StefaniDurovic/To-do-list" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/To-do-list/" target="_blank" class="button index__content--mobile-item">Live demo</a>
+            </div>
             <div class="grid__item" style="background-color: #ffb4a2;">
                 <h2>Angular Movie App</h2>
+                <img src="images/Angular.png" width="400" alt="Screenshot of Angular Movie App project">
                 <p style="height: 90px;">Frontend for the Jessica Chastain movies API. Built with Angular. Users can sign up, browse movies, read info about movies, directors and genres. They can also add movies to favorites and change personal details.</p>
                 <a href="https://github.com/StefaniDurovic/myFlix-Angular-client" target="_blank" class="button index__content--mobile-item">See projects on GitHub</a>
                 <a href="https://stefanidurovic.github.io/myFlix-Angular-client/" target="_blank" class="button index__content--mobile-item">Live demo</a>
@@ -78,6 +83,7 @@
             </div>
             <div class="grid__item" style="background-color: #6d6875;">
                 <h2>Hello World - a React Native Chat App</h2>
+                <p style="text-align:center;"><img src="images/HelloWorld.jpg" width="200" alt="Screenshot of React Native Chat App project"></p>
                 <p style="height: 80px;">A chat app built using React Native, Expo and Google Firebase. The app provides users with a user interface and options to share their location, take photos and share images.</p>
                 <a href="https://github.com/StefaniDurovic/hello-world" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
