--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,10 @@
 
             <h1 class="contactpage__h1">Let's get in touch!</h1>
 
-            <form action="#" method="post" class="contact-form">
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-1313326a-880f-4f32-bda1-a24b3e7a7155"></div>
+
+            <!-- <form action="#" method="post" class="contact-form">
                 <div class="form__element">
                     <label for="name">Your name: *</label>
                     <input type="text" id="name" required name="user_name"> <br>
@@ -72,12 +75,12 @@
                 </div>
 
                 <button type="Submit">Send message</button>
-            </form>
+            </form> -->
 
         </div>
 
         <div class="contactpage__griditem3">
-            <h3>...or send me an e-mail directly</h3>
+            <h3>...or send me an e-mail </h3>
             <a href="mailto:stefani.djurovic@yahoo.com">stefani.djurovic@yahoo.com</a><br>
         </div>
 
