added React app case study

--- a/work.html
+++ b/work.html
@@ -47,6 +47,7 @@
                 <p style="height: 60px;">Frontend for the Jessica Chastain movies API. Built with React. Users can sign up, browse movies, read info about them, add movies to favorites and change personal details.</p>
                 <a href="https://github.com/StefaniDurovic/movieAPI-client" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
                 <a href="https://jessica-chastain-movies.netlify.app/login" target="_blank" class="button index__content--mobile-item">Live demo</a>
+                <a href="casestudy.html" target="_blank" class="casestudy_button">Case study</a>
             </div>            
             <div class="grid__item" style="background-color: #A29EA9;">
                 <h2>Meet App - a React PWA</h2>
@@ -100,6 +101,6 @@
     </footer>
 
     
-    <script src="js/tota11y.min.js"></script>
+    
 </body>
 </html>
