--- a/about.html
+++ b/about.html
@@ -44,7 +44,9 @@
         
         <h1>Hi, I am Stefani, nice to meet you!</h1>
         <hr>
-        <p>I am a Web Developer and a Web Design enthusiast from Germany. My experience in web development stretches across HTML, CSS, JavaScript, TypeScript, React, React Native, Angular, Node, jQuery, Redux, Expo, Bootstrap, Material Design, Express, MongoDB, SQL, JSdoc, TypeDoc, Firebase, AWS Lambda, Recharts, Figma and more. I find my background in psychology very useful for a career in web development, since psychology studies have trained me in analytical thinking, while my previous work with people helps me really understand personas and user flows, which helps me build great user experiences.    <br> When I'm not coding, you'll find me traveling, taking photos, dancing bachata or reading. <br> Thank you for checking out my work! Feel free to contact me.<br><span class="cheers">Cheers!</span></p>
+        <p>Hi, my name is Stefani. I am a frontend web developer with a passion for UX design. After working as a psychologist for a couple of years, I learnt that I am more of an immediate-problem-solver, than someone who can wait long to see the results of their work (which is often the case in psychology). This has led me to web development, where I can satisfy my curiosity and constant hunger for learning, as well as my artistic drive. I also find it especially convenient that I can use my understanding of human behavior and motivation behind decision-making to create effective and impactful digital products.</p>
+        <p>After completing several projects on my own (which can all be found <a class="about__a" href="work.html">here</a>), I cannot wait to join a team and make beautiful and impactful applications alongside some inspiring people that I could further learn from. I am available for full-time employment in a company, as well as for remote work.</p>
+        <p class="special">Thank you for checking out my work, feel free to <a class="about__a" href="contact.html">contact me</a>!</p>
     
 
     <!-- <div>
