--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 
         <div class="contactpage__griditem3">
             <h3>...or send me an e-mail </h3>
-            <a href="mailto:stefani.djurovic@yahoo.com">stefani.djurovic@yahoo.com</a><br>
+            <a href="mailto:stefani.durovic@gmail.com">stefani.durovic@gmail.com</a>
         </div>
 
         <div class="mobile-only">
