--- a/casestudy.html
+++ b/casestudy.html
@@ -149,6 +149,7 @@
                     src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
             <a href="#"><img class="svg-color" src="images/1217098_twitter_icon.svg" alt="Twiter icon"></a>
         </div>
+        <a class="a-impressum" href="impressum.html">Impressum</a>
     </footer>
 
 
