--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <a href="https://www.linkedin.com/in/stefani-durovic-86454064/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
             <a href="#"><img class="svg-color" src="images/1217098_twitter_icon.svg" alt="Twiter icon"></a>
         </div>
+        <a class="a-impressum" href="impressum.html">Impressum</a>
     </footer>
 
     
