changed contact page layout and info

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact</title>
+    <title>Contact The Lighthouse Portfolio</title>
     <link rel="shortcut icon" href="images/favicon1.ico">
     <!--CSS reset-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -43,18 +43,11 @@
     
 
     <main class="page__main contactpage__grid">
-        
+
         <div class="contactpage__griditem1">
-            <h3>Feel free to call me...</h3>
-            <a href="tel:+491633854517">+49 1633854517</a><br>
-        </div>
-
-        <div class="contactpage__griditem2">
-
             <h1 class="contactpage__h1">Let's get in touch!</h1>
-
             <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-1313326a-880f-4f32-bda1-a24b3e7a7155"></div>
+            <div class="elfsight-app-1313326a-880f-4f32-bda1-a24b3e7a7155"></div>
 
             <!-- <form action="#" method="post" class="contact-form">
                 <div class="form__element">
@@ -79,15 +72,22 @@
 
         </div>
 
-        <div class="contactpage__griditem3">
-            <h3>...or send me an e-mail </h3>
-            <a href="mailto:stefani.durovic@gmail.com">stefani.durovic@gmail.com</a>
+        <div class="contactpage__griditem2">
+            <h3>I am located in <span style="background-color:#4f9ab8; padding:2px 5px;">Witten, Germany</span> and am available for contract work in the <span style="background-color:#4f9ab8; padding:2px 5px;">NRW</span> area or <span style="background-color:#4f9ab8; padding:2px 5px;">remotely</span>. You can contact me through the form on the left or email me directly at:<br><a style="background-color: blanchedalmond; font-size:20px; padding: 5px 35px;" class="about__a" href="mailto:stefani.durovic@gmail.com">stefani (dot) durovic (at) gmail (dot) com</a><br></h3>
+            <h3>I would also love to connect via <a class="about__a" style="font-size: smaller;" target="_blank" href="https://www.linkedin.com/in/stefani-durovic/">LinkedIn</a> or <a class="about__a" style="font-size: smaller;" target="_blank" href="https://github.com/StefaniDurovic">GitHub</a>.</h3>
+            <h3>If you would prefer to have a look at my CV first, it is just one <a href="files/Durovic-Stefani-Resume.pdf" download class="about__a" style="background-color: blanchedalmond; font-size:20px; padding:2px 5px;">click</a> away!</h3>
+            <h3>Hope we will be sharing ideas soon!<br>
+            Best,<br>
+            <span style="background-color:#4f9ab8; padding:2px 5px;">Stefani</span></h3>
         </div>
 
         <div class="mobile-only">
-            <h3>You can also call me<br>or e-mail me directly</h3>
-            <a href="tel:+491633854517">Tel: +49 1633854517</a><br>
-            <a href="mailto:stefani.durovic@gmail.com">stefani.durovic@gmail.com</a>
+            <h3>I am located in <span style="background-color:#4f9ab8; padding:2px 5px;">Witten, Germany</span> and am available for contract work in the <span style="background-color:#4f9ab8; padding:2px 5px;">NRW</span> area or <span style="background-color:#4f9ab8; padding:2px 5px;">remotely</span>. You can contact me through the form on the left or email me directly at:<br><a style="background-color: blanchedalmond; font-size:15px; padding: 5px 17px;" class="about__a" href="mailto:stefani.durovic@gmail.com">stefani (dot) durovic (at) gmail (dot) com</a><br></h3>
+            <h3>I would also love to connect via <a class="about__a" style="font-size: smaller;" target="_blank" href="https://www.linkedin.com/in/stefani-durovic/">LinkedIn</a> or <a class="about__a" style="font-size: smaller;" target="_blank" href="https://github.com/StefaniDurovic">GitHub</a>.</h3>
+            <h3>If you would prefer to have a look at my CV first, it is just one <a href="files/Durovic-Stefani-Resume.pdf" download class="about__a" style="background-color: blanchedalmond; font-size:20px; padding:2px 5px;">click</a> away!</h3>
+            <h3>Hope we will be sharing ideas soon!<br>
+            Best,<br>
+            <span style="background-color:#4f9ab8; padding:2px 5px;">Stefani</span></h3>
         </div>
 
     </main>
@@ -96,7 +96,7 @@
         <p>Find me on</p>
         <div class="social-media">
             <a href="https://github.com/StefaniDurovic" target="_blank"><img class="svg-color" src="images/1217104_github_icon.svg" alt="Github icon"></a>
-            <a href="https://www.linkedin.com/in/stefani-durovic-86454064/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
+            <a href="https://www.linkedin.com/in/stefani-durovic/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
             <a href="#"><img class="svg-color" src="images/1217098_twitter_icon.svg" alt="Twiter icon"></a>
         </div>
         <a class="a-impressum" href="impressum.html">Impressum</a>
