--- a/impressum.html
+++ b/impressum.html
@@ -66,7 +66,7 @@
         <p>Find me on</p>
         <div class="social-media">
             <a href="https://github.com/StefaniDurovic" target="_blank"><img class="svg-color" src="images/1217104_github_icon.svg" alt="Github icon"></a>
-            <a href="https://www.linkedin.com/in/stefani-durovic-86454064/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
+            <a href="https://www.linkedin.com/in/stefani-durovic/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
             <a href="#"><img class="svg-color" src="images/1217098_twitter_icon.svg" alt="Twiter icon"></a>
         </div>
         <a class="a-impressum" href="impressum.html">Impressum</a>
