--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About</title>
+    <title>About The Lighthouse Portfolio</title>
     <link rel="shortcut icon" href="images/favicon1.ico">
     <!--CSS reset-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -83,7 +83,7 @@
         </table>
     </div> -->
 
-    <a href="files/CV_Stefani_Durovic.pdf" class="button" download>Download my CV</a>
+    <a href="files/Durovic-Stefani-Resume.pdf" class="button" download>Download my CV</a>
 
     <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewbox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
@@ -690,7 +690,7 @@
         <p>Find me on</p>
         <div class="social-media">
             <a href="https://github.com/StefaniDurovic" target="_blank"><img class="svg-color" src="images/1217104_github_icon.svg" alt="Github icon"></a>
-            <a href="https://www.linkedin.com/in/stefani-durovic-86454064/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
+            <a href="https://www.linkedin.com/in/stefani-durovic/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
             <a href="#"><img class="svg-color" src="images/1217098_twitter_icon.svg" alt="Twiter icon"></a>
         </div>
         <a class="a-impressum" href="impressum.html">Impressum</a>
