--- a/casestudy.html
+++ b/casestudy.html
@@ -145,7 +145,7 @@
         <div class="social-media">
             <a href="https://github.com/StefaniDurovic" target="_blank"><img class="svg-color"
                     src="images/1217104_github_icon.svg" alt="Github icon"></a>
-            <a href="https://www.linkedin.com/in/stefani-durovic-86454064/" target="_blank"><img class="svg-color"
+            <a href="https://www.linkedin.com/in/stefani-durovic/" target="_blank"><img class="svg-color"
                     src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
             <a href="#"><img class="svg-color" src="images/1217098_twitter_icon.svg" alt="Twiter icon"></a>
         </div>
