--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Projects</title>
+    <title>Projects of The Lighthouse Portfolio</title>
     <link rel="shortcut icon" href="images/favicon1.ico">
     <!--CSS reset-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -95,7 +95,7 @@
         <p>Find me on</p>
         <div class="social-media">
             <a href="https://github.com/StefaniDurovic" target="_blank"><img class="svg-color" src="images/1217104_github_icon.svg" alt="Github icon"></a>
-            <a href="https://www.linkedin.com/in/stefani-durovic-86454064/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
+            <a href="https://www.linkedin.com/in/stefani-durovic/" target="_blank"><img class="svg-color" src="images/1217106_linkedin_icon.svg" alt="LinkedIn icon"></a>
             <a href="#"><img class="svg-color" src="images/1217098_twitter_icon.svg" alt="Twiter icon"></a>
         </div>
         <a class="a-impressum" href="impressum.html">Impressum</a>
