--- a/work.html
+++ b/work.html
@@ -79,7 +79,8 @@
             </div>
             <div class="grid__item" style="background-color: #8a8397;">
                 <h2>A Movie Database API</h2>
-                <p style="height: 90px;">A small API offering a list of chosen movies starring Oscar-winning actress Jessica Chastain. Built in Node.</p>
+                <img src="images/MovieAPI.png" width="400" style="margin-top: 20px;" alt="Screenshot of Movie Database API code">
+                <p style="height: 90px; margin-top: 47px;">A REST API that connects to a NoSQL database with access to information about different movies, directors, genres and users. Users are able to sign up, update personal information, and create a list of favorite movies. The project uses the MERN stack.</p>
                 <a href="https://github.com/StefaniDurovic/movie_api" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
             <div class="grid__item" style="background-color: #6d6875;">
